--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body{
     left: 50px;
     bottom: 200px;
     z-index: 1;
-    background-image: url(./05.png);
+    background-image: url(./hero.png);
     /* background-color: blueviolet; */
     background-repeat: no-repeat;
     background-size: 100% 100%;
